crates/osp-core/tests/compile_fail/c2_family_incompatible.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/c2_family_incompatible.rs:7:35
  |
7 |     let _ev: PhysicalCodeVector = EvidenceVector::new(0.9, 0.85, 0.7, 0.6, 0.95);
  |              ------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `PhysicalCodeVector`, found `EvidenceVector`
  |              |
  |              expected due to this
